# Middle-test

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
_3rdParty/Hunter/: install-root-dir
_3rdParty/Hunter/config-id/: config.cmake.NOLF
demo/: main.cpp
include/: logger.hpp
